--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,39 @@
 			margin-bottom: 10px;
 		}
 
+		.no-history {
+			text-align: center;
+			font-size: 16px;
+			margin-top: 10px;
+			font-weight: bold;
+			color: red;
+		}
+
 		.urlItem {
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
+			margin-bottom: 10px;
+		}
+
+		.delete {
+			cursor: pointer;
+			color: white;
+			background-color: red;
+			outline: none;
+			border: none;
+			padding: 5px 10px;
+		}
+
+		.url {
+			cursor: pointer;
+			font-size: 16px;
+			color: blue;
+			text-decoration: underline;
+			width: 100%;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
 		.actions {
@@ -38,14 +68,9 @@
 			color: white;
 		}
 
-		.url {
-			cursor: pointer;
-			color: blue;
-			text-decoration: underline;
-			width: 100%;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
+		.disabled {
+			opacity: 0.5;
+			cursor: not-allowed;
 		}
 
 		.pagination {
